fix: correct alignment for participants

--- a/src/styles/PokerRoom.module.scss
+++ b/src/styles/PokerRoom.module.scss
@@ -75,6 +75,10 @@
         display: flex;
         align-items: center;
         margin-bottom: 0.5rem;
+        width: 160px;
+        overflow: hidden;
+        justify-content: space-between;
+        
   
         .participantName {
           margin-right: 1rem;
@@ -222,11 +226,9 @@
     align-items: center;
   }
   
-  
-  
-  
-  
-  
-  
-  
+  .participantsContainer {
+    display: flex;
+    flex-flow: column wrap;
+    align-items: flex-end;
+  }
   
